[package]
name = "polkadot-collator"
version = "0.8.19"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Collator node implementation"
edition = "2018"

[dependencies]
futures = "0.3.4"
sc-service = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sc-executor = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sc-cli = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sc-client-api = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sc-network = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sp-blockchain = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sp-api = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sp-core = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
sp-runtime = { git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
consensus_common = { package = "sp-consensus", git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }
polkadot-primitives = { path = "../primitives" }
polkadot-cli = { path = "../cli" }
polkadot-network = { path = "../network" }
polkadot-validation = { path = "../validation" }
polkadot-service = { path = "../service", optional = true}
polkadot-service-new = { path = "../node/service", optional = true }
log = "0.4.8"
tokio = "0.2.13"
futures-timer = "2.0"
codec = { package = "parity-scale-codec", version = "1.3.0" }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/mxinden/substrate", branch = "conditional-kbucket-insertion" }

[features]
default = ["service-old"]
service-old = [ "polkadot-service" ]
service-rewr = [ "polkadot-service-new" ]
