[package]
name = "polkadot-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
futures = "0.1.17"
parking_lot = "0.4"
tokio = "0.1.7"
error-chain = "0.12"
log = "0.3"
exit-future = "0.1"
parity-codec = "2.1"
polkadot-availability-store = { path = "../availability-store" }
polkadot-parachain = { path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-statement-table = { path = "../statement-table" }
substrate-consensus-aura-primitives = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
substrate-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
substrate-consensus-common = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
srml-support = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }

[dev-dependencies]
substrate-keyring = { git = "https://github.com/paritytech/substrate", branch = "alexander-backports" }
