[package]
name = "polkadot-erasure-coding"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
polkadot-primitives = { path = "../primitives" }
polkadot-node-primitives = { package = "polkadot-node-primitives", path = "../node/primitives" }
novelpoly = { package = "reed-solomon-novelpoly", version = "1.0.0" }
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["std", "derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "a03b9a01e59c3d4ce4b6bb7f1f9ca150898b054c" }
sp-trie = { git = "https://github.com/paritytech/substrate", rev = "a03b9a01e59c3d4ce4b6bb7f1f9ca150898b054c" }
thiserror = "1.0.31"

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "scaling_with_validators"
harness = false
