[package]
name = "polkadot-executor"
version = "0.7.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."
edition = "2018"

[dependencies]
substrate-executor = { git = "https://github.com/paritytech/substrate", branch = "ashley-update-exit-future" }
polkadot-runtime = { path = "../runtime" }
