[package]
name = "polkadot-executor"
version = "0.7.5"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."
edition = "2018"

[dependencies]
sc-executor = { git = "https://github.com/mxinden/substrate", branch = "sentry-nodes-flag-polkadot-master" }
polkadot-runtime = { path = "../runtime" }
