[package]
name = "overseer"
version = "0.1.0"
authors = ["Fedor Sakharov <fedor.sakharov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
log = "0.4.8"
exit-future = "0.2.0"

[dev-dependencies]
futures-timer = "3.0.2"
femme = "2.0.1"
log = "0.4.8"
kv-log-macro = "1.0.6"
