[package]
name = "polkadot-parachain"
description = "Types and utilities for creating and working with parachains"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# note: special care is taken to avoid inclusion of `sp-io` externals when compiling
# this crate for WASM. This is critical to avoid forcing all parachain WASM into implementing
# various unnecessary Substrate-specific endpoints.
parity-scale-codec = { version = "3.6.1", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, features = ["serde"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, features = ["serde"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
polkadot-core-primitives = { path = "../core-primitives", default-features = false }
derive_more = "0.99.11"
bounded-collections = { version = "0.1.8", default-features = false, features = ["serde"] }

# all optional crates.
serde = { version = "1.0.163", default-features = false, features = ["derive", "alloc"] }

[features]
default = ["std"]
wasm-api = []
std = [
	"bounded-collections/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"polkadot-core-primitives/std",
	"frame-support/std",
]
runtime-benchmarks = []
