[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
futures = "0.3.4"
tempfile = "3.1.0"
rand = "0.7.3"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-test-runtime = { path = "../runtime/test-runtime" }
polkadot-network = { path = "../network" }
polkadot-rpc = { path = "../rpc" }
polkadot-service = { path = "../service" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }

[dev-dependencies]
async-std = { version = "1.2.0", features = [ "attributes" ] }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-3" }
