[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
futures = "0.3.4"
tempfile = "3.1.0"
rand = "0.7.3"
hex = "0.4"
futures01 = { package = "futures", version = "0.1.29" }
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-test-runtime = { path = "../runtime/test-runtime" }
polkadot-network = { path = "../network" }
polkadot-rpc = { path = "../rpc" }
polkadot-service = { path = "../service" }
polkadot-runtime-common = { path = "../runtime/common" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }

[dev-dependencies]
async-std = "1.5"
serde_json = "1.0"
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "cecton-testing-helpers" }
